Revert "chore: Make async tracker importer use scheduler (#15597)"
This reverts commit 5cd719cfbc00c4ffa554b83aa5737626ad656175.